# hazel-2d-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake-build-vs2022-x64.bat  cmake-build-vs2022.bat  maroon.sln
Hazel/src/: Hazel.h  hzpch.h
Hazel/src/Hazel/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Window.h
Hazel/src/Hazel/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Hazel/src/Platform/Windows/: WindowsWindow.cpp
maroon/: maroon.vcxproj  maroon.vcxproj.filters
maroon/src/: maroon.h
maroon/src/maroon/: application.cpp  application.h  core.h  entrypoint.h  key_codes.h  log.cpp  log.h
maroon/src/maroon/events/: application_event.h  event.h  key_event.h  mouse_event.h
sandbox/: sandbox.vcxproj
sandbox/src/: sandbox.cpp
